Made the blog cards display correctly on mobile

--- a/src/Components/blogs.css
+++ b/src/Components/blogs.css
@@ -63,6 +63,7 @@
   font-size: 20px;
   margin-left: 5px;
   padding: 10px;
+  border-left: black 3px solid;
 }
 
 .author {
@@ -94,4 +95,19 @@ a {
   bottom: 10px;
   right: 10px;
   font-size: 30px;
+}
+
+@media (max-width: 375px) {
+  .wrapper {
+    display: block;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    right: 0px;
+  }
+
+  .blogCard {
+    width: 90%;
+  }
 }
